# algorithms_data_structures

./: .gitignore
Leetcode/: 3.py  mts.py
Yandex/Backend_1/: gadgets_not_optimal.py
Yandex/ML/: shrink (Statuette).py
Yandex/algorithms_training_1/linear_search/: B(seqType).h  CMakeLists.txt  D(localMax).h  E(cowChamp).h  F(symmetrical).h  H(mul3).h  I (sapper).h  J (triangle).h  algorithms_1.sln  algorithms_1.vcxproj  algorithms_1.vcxproj.filters  inputs.h  main.cpp
Yandex/algorithms_training_1/linear_search/x64/Debug/: algorithms_1.exe.recipe  algorithms_1.ilk  algorithms_1.vcxproj.FileListAbsolute.txt  vc143.idb
Yandex/algorithms_training_1/linear_search/x64/Debug/algorithms_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  algorithms_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
algorithms/MFTI python/Cpp/: CMakeLists.txt  lecture_10 Binary search.h  lecture_10.h  lecture_11 LCS LIS.h  lecture_12 Levenstain.h  lecture_13 Stack.h  lecture_17 Backpack.h  lecture_3 Horner circuit.cpp  lecture_3 Horner circuit.h  lecture_3.cpp  lecture_3.h  lecture_5 Byte shift.h  lecture_5.cpp  lecture_5.h  lecture_6.cpp  lecture_6.h  lecture_7 Recursion.h  lecture_7.cpp  lecture_7.h  lecture_8 Generate permutations.h  lecture_8.cpp  lecture_8.h  lecture_9.h  main.cpp  queue.h  test  test.cpp
algorithms/MFTI python/Cpp/Debug/.cmake/api/v1/query/client-vim-cmake/: query.json
leetcode/: Backpack_LongestUniqSubstr_LongestPalindrom.py  CMakeLists.txt  ConvertString.py  Longest_Palindrom.cpp
tasks/: backpack.py
(+198 files in other folders)
